fixed spacing on archive

--- a/src/app/_blocks/ArchiveBlock/index.module.scss
+++ b/src/app/_blocks/ArchiveBlock/index.module.scss
@@ -2,6 +2,8 @@
 
 .archiveBlock {
   position: relative;
+  margin-top: 4rem;
+
 }
 
 .introContent {
