--- a/src/app/_heros/Product/index.module.scss
+++ b/src/app/_heros/Product/index.module.scss
@@ -3,6 +3,7 @@
 .productHero {
   display: flex;
   gap: calc(var(--base) * 2);
+  margin-top: 4rem;
 
   @include mid-break {
     flex-direction: column;
